examples/invalid_typed_messages/duplicate_type_across_modules/src/messages/other.argx
module messages.other
type Shared { value: bool }
